--- a/video1 and video2/video1 and video2.Rmd
+++ b/video1 and video2/video1 and video2.Rmd
@@ -30,6 +30,47 @@ All of the exercise files for this course are in `exercise files`.
 ## 02. What Is AWK
 
 
+### Naming
+
+It's named for Alfred *A*ho, Peter *W*einberger, and Brian *K*ernighan. If you search for Brian Kernighan, you'll find some videos with him talking about AWK (at least in part), such as: https://www.youtube.com/watch?v=Sg4U4r_AgJU. 
+
+
+### Where it's found
+
+In general, it's probably already installed on macOS and linux distros.
+
+```{bash}
+awk -version
+```
+
+
+There's also, nAWK, gAWK, mAWK, and others.
+
+
+### What's it good for
+
+Mostly for text processing and data operations.
+ 
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
