--- a/video3/README.Rmd
+++ b/video3/README.Rmd
@@ -1,15 +1,34 @@
+
+
 # Command line basics
+
+
+
+
 
 ## First awk program 
 
+
+The `names.txt` file:
+
+```{bash}
+cat ../exercise_files/names.txt
 ```
+
+
+Reverse first name, last name order:
+
+```{bash}
 mawk '{print $2, $1}' ../exercise_files/names.txt
 ```
 
 
-```
+```{bash}
 mawk '{print $1, $1}' ../exercise_files/names.txt
 ```
+
+
+
 
 
 ## Records, fields, etc.
@@ -20,20 +39,20 @@ Records are rows.
 
 As another example. Here we'll pull the second field out of a file
 
-```
+```{bash}
 mawk '{print $2}' ../exercise_files/dukeofyork.txt
 ```
 
 
 To add the row (record) number, add `NR`
 
-```
+```{bash}
 mawk '{print NR, $2}' ../exercise_files/dukeofyork.txt
 ```
 
 To add the number of columns (fields) the row (record) contains, add `NF`
 
-```
+```{bash}
 mawk '{print NF, $2}' ../exercise_files/dukeofyork.txt
 ```
 
@@ -46,7 +65,7 @@ mawk '{print NF, $2}' ../exercise_files/dukeofyork.txt
 
 lines containing "up"
 
-```
+```{bash}
 mawk '/up/{print NR, $0}' ../exercise_files/dukeofyork.txt
 ```
 
@@ -54,7 +73,7 @@ mawk '/up/{print NR, $0}' ../exercise_files/dukeofyork.txt
 
 lines with six words
 
-```
+```{bash}
 mawk 'NF==6{print NR, $0}' ../exercise_files/dukeofyork.txt
 ```
 
@@ -62,14 +81,14 @@ mawk 'NF==6{print NR, $0}' ../exercise_files/dukeofyork.txt
 
 lines containing "up" and (`&&`) six words
 
-```
+```{bash}
 mawk 'NF==6 && /up/{print NR, $0}' ../exercise_files/dukeofyork.txt
 ```
 
 
 lines containg "hill" or (`||`) half
 
-```
+```{bash}
 mawk '/hill/ || /half/{print NR, $0}' ../exercise_files/dukeofyork.txt
 ```
 
@@ -78,7 +97,7 @@ That last example with `/hill/ || /half/` suggests that mawk will first search f
 
 You can also print statements along with your output like so:
 
-```
+```{bash}
 mawk '/hill/{print "Contains hill -->", NR, $0}' ../exercise_files/dukeofyork.txt
 ```
 
@@ -90,20 +109,20 @@ mawk '/hill/{print "Contains hill -->", NR, $0}' ../exercise_files/dukeofyork.tx
 
 `swap` is a program that contains what are first program was
 
-```
+```{bash}
 cat ../exercise_files/swap
 ```
 
 swapping the first and last columns. To run this file we can't simply run `swap` after `mawk`. There needs to be a flag: `-f`
 
-```
+```{bash}
 mawk -f ../exercise_files/swap ../exercise_files/names.txt
 ```
 
 
 If you just run `mawk`, you'll see that `-f` is for reading a program's text in from a file (instead of from the command line) 
 
-```
+```{bash}
 mawk
 ```
 
@@ -115,14 +134,14 @@ mawk
 
 Here if it's `' '` (a space), it correctly finds the number of words
 
-```
+```{bash}
 awk -F ' ' '{print NF, "...field 5 -->", $5}' ../exercise_files/dukeofyork.txt
 ```
 
 
 But if you switch it to find words using a tab delimiter, then you won't find any separated fields (just one big one)
 
-```
+```{bash}
 awk -F '\t' '{print NF, "...field 5 -->", $5}' ../exercise_files/dukeofyork.txt
 ```
 
@@ -133,7 +152,7 @@ awk -F '\t' '{print NF, "...field 5 -->", $5}' ../exercise_files/dukeofyork.txt
 
 `v` is for inputing variables 
 
-```
+```{bash}
 mawk -v v="TEST" 'BEGIN {print $1, v}'
 ```
 
@@ -143,17 +162,17 @@ mawk -v v="TEST" 'BEGIN {print $1, v}'
 
 You can pipe things into mawk by using... pipe (`|`). As a relatively realistic example
 
-```
+```{bash}
 ls -rohat ../exercise_files | mawk '{print NF, $4, $8}'
 ```
 
 or in `uptime` the number of users is in the 3rd column (comma separated)
 
-```
+```{bash}
 uptime | mawk -F , '{print $3}'
 ```
 
-```
+```{bash}
 ls -rohat | mawk -F ' ' '{print $4, "\t\t", $8}' | sort -n
 ```
 
